# rust-avc

./: .gitignore  Cargo.toml  README.md  avc-release  avc-test-sonic
conf/: basketball_court.yaml  cds.yaml  oe.yaml
docker/: Dockerfile  build.sh  run.sh
src/: avc.rs  build.sh  compass.rs  gps.rs  lidar.rs  main.rs  motors.rs  navigation.rs  octasonic.rs  octasonic_fake.rs  opencv_ffi.cpp  qik.rs  server.rs  switch.rs  video.rs
ui/: start.html  style.css
