[package]
name = "avc"
version = "0.1.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]

[dependencies]
navigation = "0.1.7"
serial = "0.3.4"
getopts = "0.2"
rand = "0.3.13"
libc = "0.2.0"
chrono = "0.2.25"
qik = "1.2.3"
yaml-rust = "0.3.3"
graceful = "0.1.0"
spidev = "0.2.1"
sysfs_gpio = "0.4.3"
hmc5883l = "1.0.2"
libsweep = "1.0.0"
